Modified code strictness issues.